--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "private": true,
   "scripts": {
     "build": "next build",
-    "dev": "next dev --turbo",
+    "dev": "next dev",
     "start": "next start"
   },
   "dependencies": {
     "@heroicons/react": "^2.1.4",
+    "@supabase/supabase-js": "^2.46.2",
     "@tailwindcss/forms": "^0.5.7",
     "@vercel/postgres": "^0.8.0",
     "autoprefixer": "10.4.19",
